--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,11 @@
     "axios": "^1.8.4",
     "buffer": "^6.0.3",
     "circomlibjs": "^0.1.7",
+    "lucide-react": "^0.503.0",
     "process": "^0.11.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.5.1",
     "rollup-plugin-node-polyfills": "^0.2.1",
     "snarkjs": "^0.7.5",
