--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.8.4",
     "buffer": "^6.0.3",
     "circomlibjs": "^0.1.7",
+    "dotenv": "^16.5.0",
     "lucide-react": "^0.503.0",
     "process": "^0.11.10",
     "react": "^19.0.0",
